# python-project-50

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  coverage.xml  demo-flat-stylish.cast  demo-format.cast  demo-formats.cast  demo-nested-stylish.cast  demo-plain_json-formats.cast  demo_plain_json_formats.cast  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  hello_world.yml
gendiff/: __init__.py  gendiff.py
gendiff/core/: diff_builder.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  diff_builder.py  gendiff.py  parsers.py
hexlet_code/formatters/: __init__.py  json.py  json_.py  plain.py  stylish.py
hexlet_code/scripts/: cli.py  data_loader.py  diff_generator.py  gendiff.py
hexlet_code/tests/: test_diff_generator.py
python_project_50.egg-info/: SOURCES.txt
tests/: test_cli.py  test_gendiff.py
tests/test_data/: expected_plain_nested.txt  expected_stylish.txt  nested_file2.json
