[project]
name = "python-project-50"
version = "0.1.0"
description = "CLI tool for configuration comparison"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_code"]
