[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI tool for configuration comparison"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "PyYAML"
]

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_code"]
