[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI tool for configuration comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
